test/seq/cmdlists/invalid_ttl_t1.err
SyntaxError: Hex literal out of range [0x3, 0xffffffffffffffff]
Line: 3
ttl(2)=true t=0x1
              ~~~
